new Double ----> Double.valueOf